depthai-sys/csrc/depthai_c.h


typedef struct dai_device dai_device;         
typedef struct dai_pipeline dai_pipeline;     
typedef struct dai_node dai_node;             
typedef struct dai_output dai_output;         
typedef struct dai_input dai_input;           
typedef struct dai_queue dai_queue;           
typedef struct dai_input_queue dai_input_queue; 
typedef struct dai_msg dai_msg;               
typedef struct dai_calib dai_calib;           
typedef struct dai_bootloader dai_bootloader; 
typedef struct dai_device_info {
    char name[64];      
    char device_id[64]; 
    int32_t state;      
    int32_t protocol;   
    int32_t platform;   
    int32_t status;     
    int32_t reserved_[2];
} dai_device_info; 
typedef struct dai_buffer_info {
    int32_t datatype; 
    uint32_t pad_;
    int64_t timestamp_ns;        
    int64_t timestamp_device_ns; 
    int64_t sequence_num;
    const uint8_t* data; 
    size_t data_len;     
} dai_buffer_info; 
typedef struct dai_img_frame_info {
    uint32_t width;
    uint32_t height;
    uint32_t stride;        
    int32_t type;           
    uint32_t instance_num;  
    uint32_t pad_;
    int64_t sequence_num;
    int64_t timestamp_ns;        
    int64_t timestamp_device_ns; 
    size_t data_len;             
} dai_img_frame_info; 
typedef struct dai_imu_vec_report {
    int64_t ts_sec;
    int64_t ts_nsec;
    int64_t ts_device_sec;
    int64_t ts_device_nsec;
    int32_t sequence;
    int32_t accuracy; 
    float x;
    float y;
    float z;
    float pad_;
} dai_imu_vec_report; 
typedef struct dai_imu_rotvec_report {
    int64_t ts_sec;
    int64_t ts_nsec;
    int64_t ts_device_sec;
    int64_t ts_device_nsec;
    int32_t sequence;
    int32_t accuracy;
    float i;
    float j;
    float k;
    float real;
    float accuracy_rad;
    float pad_;
} dai_imu_rotvec_report; 
typedef struct dai_imu_packet {
    dai_imu_vec_report accelerometer;
    dai_imu_vec_report gyroscope;
    dai_imu_vec_report magnetic_field;
    dai_imu_rotvec_report rotation_vector;
} dai_imu_packet; 
typedef struct dai_encoded_frame_info {
    uint32_t width;
    uint32_t height;
    int32_t profile;    
    int32_t frame_type; 
    uint32_t quality;
    uint32_t bitrate;
    int32_t lossless;
    uint32_t instance_num;
    int64_t sequence_num;
    int64_t timestamp_ns;
    size_t data_len;
} dai_encoded_frame_info; 
const char* dai_last_error(void);
void dai_clear_last_error(void);
void dai_string_free(char* s);
const char* dai_build_version(void);
int dai_steady_clock_now_ns(int64_t* out);
int dai_device_open(const char* name_or_id, int32_t max_usb_speed, dai_device** out);
int dai_device_open_info(const dai_device_info* info, int32_t max_usb_speed, dai_device** out);
void dai_device_release(dai_device* d);
int dai_device_close(dai_device* d);
int dai_device_is_closed(const dai_device* d, int* out);
int dai_device_id(dai_device* d, char** out);
int dai_device_name(dai_device* d, char** out);
int dai_device_usb_speed(dai_device* d, int32_t* out);
int dai_device_platform(dai_device* d, int32_t* out);
int dai_device_connected_cameras(dai_device* d, int32_t* sockets, size_t cap, size_t* n);
int dai_device_connected_imu(dai_device* d, char** out);
int dai_device_read_calibration(dai_device* d, dai_calib** out);
int dai_device_set_ir_laser_dot_projector_intensity(dai_device* d, float intensity, int32_t mask, int* out_ok);
int dai_device_set_ir_flood_light_intensity(dai_device* d, float intensity, int32_t mask, int* out_ok);
int dai_device_all_available(dai_device_info* out, size_t cap, size_t* n);
int dai_bootloader_open(const dai_device_info* info, dai_bootloader** out);
void dai_bootloader_release(dai_bootloader* b);
int dai_pipeline_new(dai_device* device, dai_pipeline** out);
int dai_pipeline_new_host_only(dai_pipeline** out);
void dai_pipeline_release(dai_pipeline* p);
int dai_pipeline_build(dai_pipeline* p);
int dai_pipeline_start(dai_pipeline* p);
int dai_pipeline_stop(dai_pipeline* p);
int dai_pipeline_wait(dai_pipeline* p);
int dai_pipeline_is_running(const dai_pipeline* p, int* out);
int dai_pipeline_is_built(const dai_pipeline* p, int* out);
int dai_pipeline_remove(dai_pipeline* p, dai_node* n);
int dai_pipeline_create_camera(dai_pipeline* p, dai_node** out);
int dai_pipeline_create_sync(dai_pipeline* p, dai_node** out);
int dai_pipeline_create_stereo_depth(dai_pipeline* p, dai_node** out);
int dai_pipeline_create_video_encoder(dai_pipeline* p, dai_node** out);
int dai_pipeline_create_imu(dai_pipeline* p, dai_node** out);
int dai_pipeline_create_gate(dai_pipeline* p, dai_node** out);
void dai_node_release(dai_node* n);
int dai_node_id(const dai_node* n, int64_t* out);
int dai_node_type_name(const dai_node* n, const char** out);
int dai_node_output_ref(dai_node* n, const char* group, const char* name, dai_output** out);
int dai_node_input_ref(dai_node* n, const char* group, const char* name, dai_input** out);
int dai_node_output_names(dai_node* n, char** out);
int dai_node_input_names(dai_node* n, char** out);
int dai_output_name(dai_output* o, char** out);
int dai_output_link(dai_output* o, dai_input* i);
int dai_output_unlink(dai_output* o, dai_input* i);
int dai_output_create_queue(dai_output* o, uint32_t max_size, int blocking, dai_queue** out);
int dai_input_create_queue(dai_input* i, uint32_t max_size, int blocking, dai_input_queue** out);
int dai_input_set_blocking(dai_input* i, int blocking);
int dai_input_set_max_size(dai_input* i, uint32_t max_size);
int dai_camera_build(dai_node* cam, int32_t socket, int32_t sensor_w, int32_t sensor_h, float sensor_fps);
int dai_camera_board_socket(const dai_node* cam, int32_t* out);
int dai_camera_request_output(dai_node* cam, uint32_t w, uint32_t h, int32_t type, int32_t resize_mode, float fps,
                              int32_t undistort, dai_output** out);
int dai_camera_request_full_resolution_output(dai_node* cam, int32_t type, float fps, int use_highest_resolution,
                                              dai_output** out);
int dai_sync_input(dai_node* s, const char* key, dai_input** out);
int dai_sync_set_sync_threshold_ns(dai_node* s, int64_t ns);
int dai_sync_set_sync_attempts(dai_node* s, int32_t attempts);
int dai_sync_set_run_on_host(dai_node* s, int run_on_host);
int dai_stereo_depth_set_default_profile_preset(dai_node* s, int32_t preset);
int dai_stereo_depth_set_left_right_check(dai_node* s, int enable);
int dai_stereo_depth_set_subpixel(dai_node* s, int enable);
int dai_stereo_depth_set_extended_disparity(dai_node* s, int enable);
int dai_stereo_depth_set_output_size(dai_node* s, int32_t w, int32_t h);
int dai_stereo_depth_set_depth_align_socket(dai_node* s, int32_t socket);
int dai_stereo_depth_set_confidence_threshold(dai_node* s, int32_t threshold);
int dai_stereo_depth_pp_set_spatial_filter_enable(dai_node* s, int enable);
int dai_stereo_depth_pp_set_temporal_filter_enable(dai_node* s, int enable);
int dai_stereo_depth_pp_set_speckle_filter_enable(dai_node* s, int enable);
int dai_stereo_depth_pp_set_threshold_filter(dai_node* s, int32_t min_range, int32_t max_range);
int dai_stereo_depth_pp_set_decimation_factor(dai_node* s, uint32_t factor);
int dai_video_encoder_set_default_profile_preset(dai_node* e, float fps, int32_t profile);
int dai_video_encoder_set_keyframe_frequency(dai_node* e, int32_t freq);
int dai_video_encoder_set_bitrate_kbps(dai_node* e, int32_t kbps);
int dai_video_encoder_set_bitrate(dai_node* e, int32_t bps);
int dai_video_encoder_set_profile(dai_node* e, int32_t profile);
int dai_video_encoder_set_rate_control_mode(dai_node* e, int32_t mode);
int dai_video_encoder_set_num_bframes(dai_node* e, int32_t n);
int dai_video_encoder_set_quality(dai_node* e, int32_t quality);
int dai_video_encoder_set_lossless(dai_node* e, int lossless);
int dai_gate_set_run_on_host(dai_node* g, int run_on_host);
int dai_imu_enable_sensor(dai_node* imu, int32_t sensor, uint32_t report_rate_hz);
int dai_imu_set_batch_report_threshold(dai_node* imu, int32_t n);
int dai_imu_set_max_batch_reports(dai_node* imu, int32_t n);
void dai_queue_release(dai_queue* q);
int dai_queue_try_get(dai_queue* q, dai_msg** out);
int dai_queue_get(dai_queue* q, int64_t timeout_ns, dai_msg** out);
int dai_queue_has(dai_queue* q, int* out);
int dai_queue_size(dai_queue* q, uint32_t* out);
int dai_queue_close(dai_queue* q);
int dai_queue_is_closed(dai_queue* q, int* out);
int dai_queue_set_blocking(dai_queue* q, int blocking);
int dai_queue_set_max_size(dai_queue* q, uint32_t max_size);
int dai_queue_name(dai_queue* q, char** out);
void dai_input_queue_release(dai_input_queue* q);
int dai_input_queue_send(dai_input_queue* q, const dai_msg* m);
void dai_msg_release(dai_msg* m);
int dai_msg_clone(const dai_msg* m, dai_msg** out);
int dai_msg_datatype(const dai_msg* m, int32_t* out);
int dai_buffer_get_info(const dai_msg* m, dai_buffer_info* out);
int dai_msg_data(const dai_msg* m, const uint8_t** ptr, size_t* len);
int dai_msg_timestamp_ns(const dai_msg* m, int64_t* out);
int dai_msg_timestamp_device_ns(const dai_msg* m, int64_t* out);
int dai_msg_sequence_num(const dai_msg* m, int64_t* out);
int dai_img_frame_get_info(const dai_msg* m, dai_img_frame_info* out);
int dai_img_frame_plane_stride(const dai_msg* m, int32_t plane, uint32_t* out);
int dai_img_frame_plane_height(const dai_msg* m, uint32_t* out);
int dai_encoded_frame_get_info(const dai_msg* m, dai_encoded_frame_info* out);
int dai_imu_data_packets(const dai_msg* m, dai_imu_packet* out, size_t cap, size_t* n);
int dai_gate_control_new(int open, int32_t num_messages, int32_t fps, dai_msg** out);
int dai_msg_group_get(const dai_msg* g, const char* name, dai_msg** out); 
int dai_msg_group_num_messages(const dai_msg* g, int64_t* out);
int dai_msg_group_names(const dai_msg* g, char** out); 
int dai_msg_group_is_synced(const dai_msg* g, int64_t threshold_ns, int* out);
int dai_msg_group_interval_ns(const dai_msg* g, int64_t* out);
void dai_calib_release(dai_calib* c);
int dai_calib_camera_intrinsics(const dai_calib* c, int32_t socket, int32_t w, int32_t h, float out_k[9]);
int dai_calib_distortion_coefficients(const dai_calib* c, int32_t socket, float* out, size_t cap, size_t* n);
int dai_calib_distortion_model(const dai_calib* c, int32_t socket, int32_t* out);
int dai_calib_camera_extrinsics(const dai_calib* c, int32_t src, int32_t dst, int use_spec_translation, int32_t unit,
                                float out_t[16]);
int dai_calib_imu_to_camera_extrinsics(const dai_calib* c, int32_t socket, int use_spec_translation, int32_t unit,
                                       float out_t[16]);
int dai_calib_camera_to_imu_extrinsics(const dai_calib* c, int32_t socket, int use_spec_translation, int32_t unit,
                                       float out_t[16]);