depthai-sys/src/ffi.rs


extern "C" {
    pub fn dai_last_error() -> *const c_char;
    pub fn dai_clear_last_error();
    pub fn dai_string_free(s: *mut c_char);
    pub fn dai_build_version() -> *const c_char;
    pub fn dai_steady_clock_now_ns(out: *mut i64) -> c_int;
    pub fn dai_device_open(
        name_or_id: *const c_char,
        max_usb_speed: i32,
        out: *mut *mut dai_device,
    ) -> c_int;
    pub fn dai_device_open_info(
        info: *const dai_device_info,
        max_usb_speed: i32,
        out: *mut *mut dai_device,
    ) -> c_int;
    pub fn dai_device_release(d: *mut dai_device);
    pub fn dai_device_close(d: *mut dai_device) -> c_int;
    pub fn dai_device_is_closed(d: *const dai_device, out: *mut c_int) -> c_int;
    pub fn dai_device_id(d: *mut dai_device, out: *mut *mut c_char) -> c_int;
    pub fn dai_device_name(d: *mut dai_device, out: *mut *mut c_char) -> c_int;
    pub fn dai_device_usb_speed(d: *mut dai_device, out: *mut i32) -> c_int;
    pub fn dai_device_platform(d: *mut dai_device, out: *mut i32) -> c_int;
    pub fn dai_device_connected_cameras(
        d: *mut dai_device,
        sockets: *mut i32,
        cap: usize,
        n: *mut usize,
    ) -> c_int;
    pub fn dai_device_connected_imu(d: *mut dai_device, out: *mut *mut c_char) -> c_int;
    pub fn dai_device_read_calibration(d: *mut dai_device, out: *mut *mut dai_calib) -> c_int;
    pub fn dai_device_set_ir_laser_dot_projector_intensity(
        d: *mut dai_device,
        intensity: f32,
        mask: i32,
        out_ok: *mut c_int,
    ) -> c_int;
    pub fn dai_device_set_ir_flood_light_intensity(
        d: *mut dai_device,
        intensity: f32,
        mask: i32,
        out_ok: *mut c_int,
    ) -> c_int;
    pub fn dai_device_all_available(out: *mut dai_device_info, cap: usize, n: *mut usize) -> c_int;
    pub fn dai_bootloader_open(
        info: *const dai_device_info,
        out: *mut *mut dai_bootloader,
    ) -> c_int;
    pub fn dai_bootloader_release(b: *mut dai_bootloader);
    pub fn dai_pipeline_new(device: *mut dai_device, out: *mut *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_new_host_only(out: *mut *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_release(p: *mut dai_pipeline);
    pub fn dai_pipeline_build(p: *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_start(p: *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_stop(p: *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_wait(p: *mut dai_pipeline) -> c_int;
    pub fn dai_pipeline_is_running(p: *const dai_pipeline, out: *mut c_int) -> c_int;
    pub fn dai_pipeline_is_built(p: *const dai_pipeline, out: *mut c_int) -> c_int;
    pub fn dai_pipeline_remove(p: *mut dai_pipeline, n: *mut dai_node) -> c_int;
    pub fn dai_pipeline_create_camera(p: *mut dai_pipeline, out: *mut *mut dai_node) -> c_int;
    pub fn dai_pipeline_create_sync(p: *mut dai_pipeline, out: *mut *mut dai_node) -> c_int;
    pub fn dai_pipeline_create_stereo_depth(p: *mut dai_pipeline, out: *mut *mut dai_node)
        -> c_int;
    pub fn dai_pipeline_create_video_encoder(
        p: *mut dai_pipeline,
        out: *mut *mut dai_node,
    ) -> c_int;
    pub fn dai_pipeline_create_imu(p: *mut dai_pipeline, out: *mut *mut dai_node) -> c_int;
    pub fn dai_pipeline_create_gate(p: *mut dai_pipeline, out: *mut *mut dai_node) -> c_int;
    pub fn dai_node_release(n: *mut dai_node);
    pub fn dai_node_id(n: *const dai_node, out: *mut i64) -> c_int;
    pub fn dai_node_type_name(n: *const dai_node, out: *mut *const c_char) -> c_int;
    pub fn dai_node_output_ref(
        n: *mut dai_node,
        group: *const c_char,
        name: *const c_char,
        out: *mut *mut dai_output,
    ) -> c_int;
    pub fn dai_node_input_ref(
        n: *mut dai_node,
        group: *const c_char,
        name: *const c_char,
        out: *mut *mut dai_input,
    ) -> c_int;
    pub fn dai_node_output_names(n: *mut dai_node, out: *mut *mut c_char) -> c_int;
    pub fn dai_node_input_names(n: *mut dai_node, out: *mut *mut c_char) -> c_int;
    pub fn dai_output_name(o: *mut dai_output, out: *mut *mut c_char) -> c_int;
    pub fn dai_output_link(o: *mut dai_output, i: *mut dai_input) -> c_int;
    pub fn dai_output_unlink(o: *mut dai_output, i: *mut dai_input) -> c_int;
    pub fn dai_output_create_queue(
        o: *mut dai_output,
        max_size: u32,
        blocking: c_int,
        out: *mut *mut dai_queue,
    ) -> c_int;
    pub fn dai_input_create_queue(
        i: *mut dai_input,
        max_size: u32,
        blocking: c_int,
        out: *mut *mut dai_input_queue,
    ) -> c_int;
    pub fn dai_input_set_blocking(i: *mut dai_input, blocking: c_int) -> c_int;
    pub fn dai_input_set_max_size(i: *mut dai_input, max_size: u32) -> c_int;
    pub fn dai_camera_build(
        cam: *mut dai_node,
        socket: i32,
        sensor_w: i32,
        sensor_h: i32,
        sensor_fps: f32,
    ) -> c_int;
    pub fn dai_camera_board_socket(cam: *const dai_node, out: *mut i32) -> c_int;
    pub fn dai_camera_request_output(
        cam: *mut dai_node,
        w: u32,
        h: u32,
        type_: i32,
        resize_mode: i32,
        fps: f32,
        undistort: i32,
        out: *mut *mut dai_output,
    ) -> c_int;
    pub fn dai_camera_request_full_resolution_output(
        cam: *mut dai_node,
        type_: i32,
        fps: f32,
        use_highest_resolution: c_int,
        out: *mut *mut dai_output,
    ) -> c_int;
    pub fn dai_sync_input(s: *mut dai_node, key: *const c_char, out: *mut *mut dai_input) -> c_int;
    pub fn dai_sync_set_sync_threshold_ns(s: *mut dai_node, ns: i64) -> c_int;
    pub fn dai_sync_set_sync_attempts(s: *mut dai_node, attempts: i32) -> c_int;
    pub fn dai_sync_set_run_on_host(s: *mut dai_node, run_on_host: c_int) -> c_int;
    pub fn dai_stereo_depth_set_default_profile_preset(s: *mut dai_node, preset: i32) -> c_int;
    pub fn dai_stereo_depth_set_left_right_check(s: *mut dai_node, enable: c_int) -> c_int;
    pub fn dai_stereo_depth_set_subpixel(s: *mut dai_node, enable: c_int) -> c_int;
    pub fn dai_stereo_depth_set_extended_disparity(s: *mut dai_node, enable: c_int) -> c_int;
    pub fn dai_stereo_depth_set_output_size(s: *mut dai_node, w: i32, h: i32) -> c_int;
    pub fn dai_stereo_depth_set_depth_align_socket(s: *mut dai_node, socket: i32) -> c_int;
    pub fn dai_stereo_depth_set_confidence_threshold(s: *mut dai_node, threshold: i32) -> c_int;
    pub fn dai_stereo_depth_pp_set_spatial_filter_enable(s: *mut dai_node, enable: c_int) -> c_int;
    pub fn dai_stereo_depth_pp_set_temporal_filter_enable(s: *mut dai_node, enable: c_int)
        -> c_int;
    pub fn dai_stereo_depth_pp_set_speckle_filter_enable(s: *mut dai_node, enable: c_int) -> c_int;
    pub fn dai_stereo_depth_pp_set_threshold_filter(
        s: *mut dai_node,
        min_range: i32,
        max_range: i32,
    ) -> c_int;
    pub fn dai_stereo_depth_pp_set_decimation_factor(s: *mut dai_node, factor: u32) -> c_int;
    pub fn dai_video_encoder_set_default_profile_preset(
        e: *mut dai_node,
        fps: f32,
        profile: i32,
    ) -> c_int;
    pub fn dai_video_encoder_set_keyframe_frequency(e: *mut dai_node, freq: i32) -> c_int;
    pub fn dai_video_encoder_set_bitrate_kbps(e: *mut dai_node, kbps: i32) -> c_int;
    pub fn dai_video_encoder_set_bitrate(e: *mut dai_node, bps: i32) -> c_int;
    pub fn dai_video_encoder_set_profile(e: *mut dai_node, profile: i32) -> c_int;
    pub fn dai_video_encoder_set_rate_control_mode(e: *mut dai_node, mode: i32) -> c_int;
    pub fn dai_video_encoder_set_num_bframes(e: *mut dai_node, n: i32) -> c_int;
    pub fn dai_video_encoder_set_quality(e: *mut dai_node, quality: i32) -> c_int;
    pub fn dai_video_encoder_set_lossless(e: *mut dai_node, lossless: c_int) -> c_int;
    pub fn dai_gate_set_run_on_host(g: *mut dai_node, run_on_host: c_int) -> c_int;
    pub fn dai_imu_enable_sensor(imu: *mut dai_node, sensor: i32, report_rate_hz: u32) -> c_int;
    pub fn dai_imu_set_batch_report_threshold(imu: *mut dai_node, n: i32) -> c_int;
    pub fn dai_imu_set_max_batch_reports(imu: *mut dai_node, n: i32) -> c_int;
    pub fn dai_queue_release(q: *mut dai_queue);
    pub fn dai_queue_try_get(q: *mut dai_queue, out: *mut *mut dai_msg) -> c_int;
    pub fn dai_queue_get(q: *mut dai_queue, timeout_ns: i64, out: *mut *mut dai_msg) -> c_int;
    pub fn dai_queue_has(q: *mut dai_queue, out: *mut c_int) -> c_int;
    pub fn dai_queue_size(q: *mut dai_queue, out: *mut u32) -> c_int;
    pub fn dai_queue_close(q: *mut dai_queue) -> c_int;
    pub fn dai_queue_is_closed(q: *mut dai_queue, out: *mut c_int) -> c_int;
    pub fn dai_queue_set_blocking(q: *mut dai_queue, blocking: c_int) -> c_int;
    pub fn dai_queue_set_max_size(q: *mut dai_queue, max_size: u32) -> c_int;
    pub fn dai_queue_name(q: *mut dai_queue, out: *mut *mut c_char) -> c_int;
    pub fn dai_input_queue_release(q: *mut dai_input_queue);
    pub fn dai_input_queue_send(q: *mut dai_input_queue, m: *const dai_msg) -> c_int;
    pub fn dai_msg_release(m: *mut dai_msg);
    pub fn dai_msg_clone(m: *const dai_msg, out: *mut *mut dai_msg) -> c_int;
    pub fn dai_msg_datatype(m: *const dai_msg, out: *mut i32) -> c_int;
    pub fn dai_buffer_get_info(m: *const dai_msg, out: *mut dai_buffer_info) -> c_int;
    pub fn dai_msg_data(m: *const dai_msg, ptr: *mut *const u8, len: *mut usize) -> c_int;
    pub fn dai_msg_timestamp_ns(m: *const dai_msg, out: *mut i64) -> c_int;
    pub fn dai_msg_timestamp_device_ns(m: *const dai_msg, out: *mut i64) -> c_int;
    pub fn dai_msg_sequence_num(m: *const dai_msg, out: *mut i64) -> c_int;
    pub fn dai_img_frame_get_info(m: *const dai_msg, out: *mut dai_img_frame_info) -> c_int;
    pub fn dai_img_frame_plane_stride(m: *const dai_msg, plane: i32, out: *mut u32) -> c_int;
    pub fn dai_img_frame_plane_height(m: *const dai_msg, out: *mut u32) -> c_int;
    pub fn dai_encoded_frame_get_info(m: *const dai_msg, out: *mut dai_encoded_frame_info)
        -> c_int;
    pub fn dai_imu_data_packets(
        m: *const dai_msg,
        out: *mut dai_imu_packet,
        cap: usize,
        n: *mut usize,
    ) -> c_int;
    pub fn dai_gate_control_new(
        open: c_int,
        num_messages: i32,
        fps: i32,
        out: *mut *mut dai_msg,
    ) -> c_int;
    pub fn dai_msg_group_get(
        g: *const dai_msg,
        name: *const c_char,
        out: *mut *mut dai_msg,
    ) -> c_int;
    pub fn dai_msg_group_num_messages(g: *const dai_msg, out: *mut i64) -> c_int;
    pub fn dai_msg_group_names(g: *const dai_msg, out: *mut *mut c_char) -> c_int;
    pub fn dai_msg_group_is_synced(g: *const dai_msg, threshold_ns: i64, out: *mut c_int) -> c_int;
    pub fn dai_msg_group_interval_ns(g: *const dai_msg, out: *mut i64) -> c_int;
    pub fn dai_calib_release(c: *mut dai_calib);
    pub fn dai_calib_camera_intrinsics(
        c: *const dai_calib,
        socket: i32,
        w: i32,
        h: i32,
        out_k: *mut f32,
    ) -> c_int;
    pub fn dai_calib_distortion_coefficients(
        c: *const dai_calib,
        socket: i32,
        out: *mut f32,
        cap: usize,
        n: *mut usize,
    ) -> c_int;
    pub fn dai_calib_distortion_model(c: *const dai_calib, socket: i32, out: *mut i32) -> c_int;
    pub fn dai_calib_camera_extrinsics(
        c: *const dai_calib,
        src: i32,
        dst: i32,
        use_spec_translation: c_int,
        unit: i32,
        out_t: *mut f32,
    ) -> c_int;
    pub fn dai_calib_imu_to_camera_extrinsics(
        c: *const dai_calib,
        socket: i32,
        use_spec_translation: c_int,
        unit: i32,
        out_t: *mut f32,
    ) -> c_int;
    pub fn dai_calib_camera_to_imu_extrinsics(
        c: *const dai_calib,
        socket: i32,
        use_spec_translation: c_int,
        unit: i32,
        out_t: *mut f32,
    ) -> c_int;
